kubernetes/apps/networking/gateway-api/config/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: web
  namespace: networking
  annotations:
    io.cilium/lb-ipam-ips: 10.0.10.2
spec:
  gatewayClassName: cilium
  listeners:
    - protocol: HTTP
      port: 80
      name: web-gw
      hostname: "*.whoverse.dev"
      allowedRoutes:
        namespaces:
          from: All
